<resources>
    <string name="app_name">TO DO</string>
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_calendar">Calendar</string>
    <string name="task_name">Task name</string>
    <string name="meeting">Meeting</string>
    <string name="discription">Discription</string>
    <string name="morning_run">Morning run</string>
    <string name="select_a_category">Select a category</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="important">Important</string>
    <string name="reminde">Reminde</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="input_discription">Discription is required!</string>
    <string name="input_task_name">Task name is required!</string>
    <string name="work">WORK</string>
    <string name="home">HOME</string>
    <string name="personal">PERSONAL</string>
    <string name="custom_time">00:00</string>
    <string name="custom_text">Hakuna Matata</string>
    <string name="add_some_todo">Add some todo</string>

    <string-array name="category">
        <item>Home</item>
        <item>Work</item>
        <item>Personal</item>
    </string-array>

</resources>