<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.todo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_task"
        android:name="com.example.todo.ui.task.TaskFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_navigation_task_to_addFragment"
            app:destination="@id/addFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.todo.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.todo.ui.add.AddFragment"
        android:label="add_fragment"
        tools:layout="@layout/fragment_add" />
</navigation>