<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_russian_900">

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/personal"
        android:textColor="@color/sea_green_700"
        android:gravity="center"
        android:background="@drawable/bg_task_personal"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/fb_star"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_star_border_24"
        android:layout_margin="15dp"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_time"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:text="@string/custom_time"
        android:textColor="@color/grey_suit_500"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_date"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:text="@string/custom_time"
        android:textColor="@color/grey_suit_500"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/tv_discription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:text="@string/title_calendar"
        android:textColor="@color/ghost_300"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_category" />



</androidx.constraintlayout.widget.ConstraintLayout>