<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/bg_dark"
    android:layout_marginVertical="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBox
        android:id="@+id/cb_task"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_task"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:text="@string/custom_text"
        android:textSize="20sp"
        android:textColor="@color/grey_suit_500"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/cb_task"/>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/personal"
        android:textColor="@color/sea_green_700"
        android:gravity="center"
        android:background="@drawable/bg_task_personal"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fb_star"/>

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/fb_star"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_star_border_24"
        android:layout_marginHorizontal="10dp"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_time"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/custom_time"
        android:textColor="@color/grey_suit_500"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>