<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_russian_900"
        tools:context=".ui.add.AddFragment">

        <TextView
            android:id="@+id/tv_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/task_name"
            android:textColor="@color/ghost_300"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/meeting"
            android:paddingHorizontal="15dp"
            android:textColor="@color/ghost_300"
            android:textColorHint="@color/grey_suit_500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_task_name" />

        <TextView
            android:id="@+id/tv_discription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/discription"
            android:textColor="@color/ghost_300"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_task_name" />

        <EditText
            android:id="@+id/et_discription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/morning_run"
            android:paddingHorizontal="15dp"
            android:textColor="@color/ghost_300"
            android:textColorHint="@color/grey_suit_500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_discription" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/category"
            android:textColor="@color/ghost_300"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_discription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_category">

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="Select a category"
                android:background="@drawable/bg_edit_text"
                android:entries="@array/category"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_spinner">

            <ImageView
                android:id="@+id/iv_calendar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"
                android:textColor="@color/grey_suit_500"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_date">

            <ImageView
                android:id="@+id/iv_time"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_baseline_access_time_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_time"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"
                android:textColor="@color/grey_suit_500"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_selection"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/cl_time">

            <TextView
                android:id="@+id/tv_important"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_tv_add"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/important"
                android:textColor="@color/ghost_300"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_baseline_star_border_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_reminde"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_reminde"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_tv_add"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/reminde"
                android:textColor="@color/ghost_300"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_baseline_notifications_none_24"
                app:layout_constraintLeft_toRightOf="@+id/tv_important"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_btn_confirmation"
            android:text="@string/confirm"
            android:textColor="@color/ghost_300"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>